testing/runner/tests/snapshots/multi_index_dml__delete-multi-index-and-access-shape.snap
---
source: multi_index_dml.sqltest
expression: DELETE FROM t WHERE i1 = 5 AND i2 = 6;
info:
  statement_type: DELETE
  tables:
  - t
  setup_blocks:
  - multi_index_dml_schema
  database: ':memory:'
---
QUERY PLAN
`--MULTI-INDEX AND t (t_i1, t_i2)
